RTR-0004: update exception handling, add AccessDeniedException support, and refactor GlobalExceptionHandler